--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   # URL launcher (only this is needed)
   url_launcher: ^6.3.2
   huawei_location: ^6.11.0+300
+  http: ^1.1.0   # <-- Add this line
 
 dev_dependencies:
   flutter_test:
