--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,9 @@
+# Gradle JVM settings
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+
+# AndroidX
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Mapbox Downloads Token (read from env var if available)
+MAPBOX_DOWNLOADS_TOKEN=${MAPBOX_DOWNLOADS_TOKEN}
